fixed bug with the white separator being too big

--- a/src/styles/pages/_LandingPage.scss
+++ b/src/styles/pages/_LandingPage.scss
@@ -186,8 +186,8 @@ blockquote {
 
   .icon-bg {
     display: block;
-    width: 70%;
-    margin: 0 auto;
+    width: 60%;
+    margin: 1rem auto 0;
 
     position: relative;
     transform: translateY(0.03rem); 
